# csvio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
csvio/: __init__.py  config.py  csvbase.py  csvreader.py  csvwriter.py  errors.py  filebase.py
csvio/processors/: __init__.py  field_processor.py  processor_base.py  row_processor.py
csvio/remote/: __init__.py  ftp.py  remote_base.py
csvio/utils/: types.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  csvio.csvbase.rst  csvio.csvreader.rst  csvio.csvwriter.rst  csvio.fieldprocessor.rst  csvio.filebase.rst  csvio.processorbase.rst  csvio.processors.rst  csvio.rowprocessor.rst  csvio.rst  index.rst
docs/source/base_classes/: csvio.base_classes.rst  csvio.csvbase.rst  csvio.filebase.rst  csvio.processorbase.rst  csvio.remote_base.rst
docs/source/examples/: csvio.csvbase.rst  csvio.csvreader.rst  csvio.csvwriter.rst  csvio.fieldprocessor.rst  csvio.ftp.rst  csvio.processors_combined.rst  csvio.processors_standalone.rst
docs/source/local_rw/: csvio.csvreader.rst  csvio.csvwriter.rst  csvio.local_rw.rst
docs/source/processors/: csvio.fieldprocessor.rst  csvio.rowprocessor.rst
docs/source/remote_rw/: csvio.remote_rw.rst
docs/source/remote_rw/ftp/: csvio.ftp.rst  csvio.ftp_reader.rst  csvio.ftp_writer.rst
tests/: __init__.py  csv_contents_generator.py  csv_data.py  docker-compose.yml  test_combined_processors.py  test_csvbase.py  test_csvio.py  test_csvreader.py  test_csvwriter.py  test_field_processors.py  test_filebase.py  test_ftpreader.py  test_read_config.py  test_row_processor.py
tests/sample_data/: fruit_stock.csv  fruit_stock_processed.csv  sample_products.csv
