[tool.poetry]
name = "csvio"
version = "1.1.1"
description = "CSV Wrapper for conveniently processing csv files"
authors = ["Salman Raza <raza.salman@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://csvio.readthedocs.io"
documentation = "https://csvio.readthedocs.io"
repository = "https://github.com/s-raza/csvio"
keywords = ["csv", "file processing", "utilities", "python"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
ptpython = "^3.0.19"
pre-commit = "^2.13.0"
flake8 = "^3.8"
black = {version = "^21.6b0", allow-prereleases = true}
mypy = "^0.910"
isort = "^5.9.2"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
readme-renderer = "^30.0"
python-on-whales = "^0.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
